2008-06-10 [mones]	3.4.0cvs89

	* AUTHORS
	* tools/Makefile.am
	* tools/README
	* tools/convert_mbox.sh
		Undo cvs86 and cvs87, it really should be a patch to 
		convert_mbox.pl

2008-06-10 [wwp]	3.4.0cvs88

	* po/fr.po
		Updated French translation.

2008-06-10 [mones]	3.4.0cvs87

	* tools/Makefile.am
		Oops, forgot to add previous script for distribution

2008-06-10 [mones]	3.4.0cvs86

	* AUTHORS
	* tools/README
	* tools/convert_mbox.sh
		Added script to convert Evolution mail folders contributed
		by Daniel Dickinson <cshore@fionavar.ca>
		Fixes debian bug 461435

2008-06-09 [colin]	3.4.0cvs85

	* src/main.c
		Integrate AWN information bubble if dbus is
		available
	* src/folder.c
		Fix crash when calling scan_required() on 
		folder classes that don't implement them
	* src/common/session.c
		Fix a little typo

2008-06-09 [colin]	3.4.0cvs84

	* src/main.c
		Fix bug 1447, 'If user tries to close while starting 
		up, it will not close ever.'

2008-06-09 [colin]	3.4.0cvs83

	* src/filtering.c
		Fix bug 1628, 'Claws Mail crashes when 
		filtering selected messages'

2008-06-04 [colin]	3.4.0cvs82

	* src/messageview.c
		Complete handling of html parts in multipart/alternative
		mails

2008-06-03 [paul]	3.4.0cvs81

	* src/prefs_message.c
		make always the english good

2008-06-03 [colin]	3.4.0cvs80

	* src/mainwindow.c
	* src/mainwindow.h
		Fix bug 1624, '[PATCH] Quick search should be 
		disabled for folder view'; based on a patch by
		Michael Terry

2008-06-03 [iwkse]	3.4.0cvs79

	* src/addressbook.c
		Fix little gui bug on button sensitivity
	* src/messageview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_message.c
		Allow by default to show html in multipart/alternative

2008-06-02 [colin]	3.4.0cvs78

	* src/prefs_actions.c
		GUI rework, patch by Pawel 

2008-06-02 [colin]	3.4.0cvs77

	* src/quote_fmt.c
		Fix sensitivity/alignment, patch from
		Pawel

2008-05-31 [colin]	3.4.0cvs76

	* src/imap.c
		Fix login issue introduced in cvs75.
